deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: training
  labels:
    app: myapp
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: mohandevops78/custome-nginx:v1
        ports:
        - containerPort: 80
