pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: training
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  
  - name: ubuntu
    image: ubuntu:18.04
    command:
        - "sleep"
        - "40000"
    imagePullPolicy: IfNotPresent
