cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: nginx
  namespace: training
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
