cluster_ip_updated.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: myapp
  name: nginx
  namespace: training
spec:
  clusterIP: 10.100.246.239
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
  type: ClusterIP
