headless.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
spec:
  clusterIP: None 
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
