ingress-host.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "intellipaat.com"
    http:
      paths:
      - path: /
        backend:
          service:
            name: nginx
            port:
              number: 80


  - host: "intellipaat-new.com"
    http:
      paths:
      - path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
