ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "testintellipaat.com"
    http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-new
            port:
              number: 80
